--- a/242ProjectWebsite.html
+++ b/242ProjectWebsite.html
@@ -26,8 +26,8 @@
     </div>
   </div>
   <div class="row" id="podcastRow"><!--podcast player-->
-    <div class="col-md-12 col-sm-12 col-xs-12">
-      <iframe src="https://player.vimeo.com/video/109541524?byline=0&amp;portrait=0" width="400" height="225" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+    <div class="col-md-12 col-sm-12 col-xs-12" style="height: 150px">
+    <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/162777996&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
     </div>
   </div>
   <div class="row"><!-- -->
@@ -57,6 +57,8 @@
       </p>
     </div>
     <div role="tabpanel" class="tab-pane" id="messages">
+      <iframe width="940" height="600" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://occidental.maps.arcgis.com/home/webmap/templates/OnePane/basicviewer/embed.html?webmap=885271d38da64632ae524a232318f146&amp;gcsextent=-74.2235,40.5681,-73.5547,40.8534&amp;displayslider=true&amp;displaylegend=true&amp;displaysearch=true&amp;searchextent=true"></iframe>
+      <iframe width="940" height="600" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://occidental.maps.arcgis.com/home/webmap/templates/OnePane/basicviewer/embed.html?webmap=32ffe0ffa34c4427aaa2c3f9e8129449&amp;gcsextent=-71.2583,42.2633,-70.9239,42.4024&amp;displayslider=true&amp;displaylegend=true&amp;displaysearch=true&amp;searchextent=true"></iframe>
       <p>
         Ugh pop-up mumblecore 8-bit small batch try-hard. Biodiesel Vice post-ironic, synth Pinterest skateboard bicycle rights 90's hoodie. Blog Pinterest beard Vice. Cronut tattooed Schlitz XOXO, ennui artisan chambray butcher McSweeney's listicle hashtag semiotics PBR&B keytar four loko. Kitsch Austin Marfa Vice tilde flannel bicycle rights PBR. Plaid craft beer tote bag squid dreamcatcher, Pinterest kitsch chia Pitchfork Carles Williamsburg tofu vinyl Tonx church-key. Stumptown direct trade pop-up Portland pork belly, banjo vegan.
       </p>
