added the perfect photo, changed title font

--- a/242ProjectWebsite.html
+++ b/242ProjectWebsite.html
@@ -11,6 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin-ext,latin' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Droid+Sans:700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
   </head>
 
 <body class="container">
@@ -58,7 +59,9 @@
     </div>
     <div role="tabpanel" class="tab-pane" id="messages">
       <iframe width="940" height="600" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://occidental.maps.arcgis.com/home/webmap/templates/OnePane/basicviewer/embed.html?webmap=885271d38da64632ae524a232318f146&amp;gcsextent=-74.2235,40.5681,-73.5547,40.8534&amp;displayslider=true&amp;displaylegend=true&amp;displaysearch=true&amp;searchextent=true"></iframe>
+      (If the above map does not show up, you can see it <a href="http://bit.ly/1F7Um2t">here</a>)
       <iframe width="940" height="600" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://occidental.maps.arcgis.com/home/webmap/templates/OnePane/basicviewer/embed.html?webmap=32ffe0ffa34c4427aaa2c3f9e8129449&amp;gcsextent=-71.2583,42.2633,-70.9239,42.4024&amp;displayslider=true&amp;displaylegend=true&amp;displaysearch=true&amp;searchextent=true"></iframe>
+      (If the above map does not show up, you can see it <a href="http://bit.ly/1vtLseG">here</a>)
       <p>
         Ugh pop-up mumblecore 8-bit small batch try-hard. Biodiesel Vice post-ironic, synth Pinterest skateboard bicycle rights 90's hoodie. Blog Pinterest beard Vice. Cronut tattooed Schlitz XOXO, ennui artisan chambray butcher McSweeney's listicle hashtag semiotics PBR&B keytar four loko. Kitsch Austin Marfa Vice tilde flannel bicycle rights PBR. Plaid craft beer tote bag squid dreamcatcher, Pinterest kitsch chia Pitchfork Carles Williamsburg tofu vinyl Tonx church-key. Stumptown direct trade pop-up Portland pork belly, banjo vegan.
       </p>
