--- a/242ProjectWebsite.html
+++ b/242ProjectWebsite.html
@@ -21,7 +21,7 @@
   <div class="row" id="title"><!--Header -->
     <div class="col-md-12 col-sm-12 col-xs-12">
       <div>
-      <h1> Title of the Project</h1>
+      <h1>How Distinctive is Urban Perception?</h1>
       <h4> R. Maiti, M. Garrido, T. Yates, E. Kohanyi</h4>
       </div>
     </div>
