--- a/242ProjectWebsite.html
+++ b/242ProjectWebsite.html
@@ -21,8 +21,19 @@
   <div class="row" id="title"><!--Header -->
     <div class="col-md-12 col-sm-12 col-xs-12">
       <div>
+        <div class="col-md-12">
       <h1>How Distinctive is Urban Perception?</h1>
-      <h4> R. Maiti, M. Garrido, T. Yates, E. Kohanyi</h4>
+    </div>
+      <div class="col-md-6">
+        <h4 class="text-left">R. Maiti, M. Garrido, T. Yates, E. Kohanyi</h4>
+      </div>
+      <div class="col-md-6">
+      </div>
+      <div class="col-md-6">
+      </div>
+      <div class="col-md-6">
+        <h5>Using data from MIT's <a href="http://pulse.media.mit.edu/data/">Place Pulse 1.0: The Pilot Study</a>, done from 2010-2012</h5>
+      </div>
       </div>
     </div>
   </div>
@@ -64,7 +75,7 @@
       </p>
     </div>
     <div role="tabpanel" class="tab-pane" id="messages">
-      <h3><strong>Safety in New York City:</strong></h3>
+      <h3><strong>Crime vs. Perceptions of Safety in New York City:</strong></h3>
       <p>
         <iframe width="940" height="600" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://occidental.maps.arcgis.com/home/webmap/templates/OnePane/basicviewer/embed.html?webmap=af6409d05252448ca33c74b6499226c0&amp;gcsextent=-74.2379,40.5608,-73.6048,40.8461&amp;displayslider=true&amp;displaylegend=true&amp;displaysearch=true&amp;searchextent=true"></iframe>
         <br>(If the above map does not show up, you can see it <a href="http://bit.ly/1vtLseG">here</a>)
