--- a/242ProjectWebsite.html
+++ b/242ProjectWebsite.html
@@ -104,8 +104,8 @@
 
   <footer class="footer" id="footer">
     <div class="container">
-      <p class="text-muted">E. Kohanyi, Copyright 2014</p>
-      <p class="text-muted">Background Image Source: <a href="www.leonoverweel.com/blog/black-and-white-views-from-the-empire-state-building-part-2/">Leon Overweel</a></p>
+      <p class="text-muted">E. Kohanyi, M. Garrido, R. Maiti, T. Yates, Copyright 2014</p>
+      <p class="text-muted">Background Image Source: <a href="www.leonoverweel.com/blog/black-and-white-views-from-the-empire-state-building-part-2/"><u>Leon Overweel</u></a></p>
     </div>
   </footer>
 
