put in the objective

--- a/html:css/242ProjectWebsite.html
+++ b/html:css/242ProjectWebsite.html
@@ -61,7 +61,7 @@
           <div role="tabpanel" class="tab-pane active" id="home">
             <div class="col-md-10 lead">
             <p>
-              Tousled jean shorts swag literally cornhole craft beer. Bitters locavore Thundercats Brooklyn. Distillery bicycle rights artisan flannel, hoodie Truffaut tote bag church-key Pitchfork gluten-free freegan pork belly cardigan direct trade irony. Thundercats Brooklyn sartorial roof party, Kickstarter VHS 3 wolf moon quinoa fixie fanny pack chillwave 8-bit crucifix Godard PBR. Typewriter tattooed art party selvage, normcore pork belly Vice skateboard distillery. Cred migas Brooklyn, hoodie gastropub YOLO vegan. Tilde Schlitz kale chips hoodie bicycle rights 90's, umami Tumblr listicle iPhone letterpress.
+              The purpose of this project was to apply computational techniques to a dataset. The data we obtained was taken from a pilot study done at MIT titled Place Pulse 1.0. Varied experimental methods in the original study led to an imbalance in the amount of information gathered from New York and Boston versus Linz and Salzburg. Furthermore, urban statistics and information is more readily available to us from American cities than European ones. Therefore, we used data solely from the cities of New York and Boston. After compiling all of the data, we organized it to create heat maps, processed it through a neural network and compared it with actual measures of crime and median income.
             </p>
             </div>
           </div>
@@ -205,10 +205,10 @@
             <h3><strong>Crime vs. Perceptions of Safety in New York City:</strong></h3>
             <p>
               <iframe width="940" height="600" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://occidental.maps.arcgis.com/home/webmap/templates/OnePane/basicviewer/embed.html?webmap=af6409d05252448ca33c74b6499226c0&amp;gcsextent=-74.2379,40.5608,-73.6048,40.8461&amp;displayslider=true&amp;displaylegend=true&amp;displaysearch=true&amp;searchextent=true"></iframe>
-              <br>(If the above map does not render, you can find it <a href="http://bit.ly/1vtLseG" target="_blank"><u>here</u></a>)
+              <br><em>(If the above map does not render, you can find it <a href="http://bit.ly/1vtLseG" target="_blank"><u>here</u></a>)</em>
               <br>
               <img src="CrimeMapNYC.png" width="940px"/>
-              <br>(You can find the full interactive map <a href="http://maps.nyc.gov/crime/" target="_blank"><u>here</u></a>)
+              <br><em>(You can find the full interactive map <a href="http://maps.nyc.gov/crime/" target="_blank"><u>here</u></a>)</em>
             </p>
             <p>
               There were notable differences in the data visualization between our data and the New York City crime map. The place pulse data shows that Midtown and lower Manhattan are overall perceived as high in safety, while the New York City crime map indicates that these areas actually have some of the highest crime rates in New York City (3-10 crimes per 1000 residents). We hypothesize that the large corporate presence in Manhattan, in terms of office and government buildings, may have misled participants in the Place Pulse Study into believing it to be a safer area, whereas in fact, crime is much more ubiquitous in Midtown and Lower Manhattan. In contrast to this finding, the areas around Upper Brooklyn, just below the Newtown Creek were generally perceived, in the place pulse study, as unsafe while these areas on the New York City crime map are either quite low in crime rates, or not nearly as high as Midtown or Lower Manhattan.
