input top quartile maps into data section

--- a/html:css/242ProjectWebsite.html
+++ b/html:css/242ProjectWebsite.html
@@ -199,13 +199,19 @@
                   <td><.0001</td>
                 </tr>
               </table>
+              <br>
+              <h4>Points that rank in the top quartile for all categories (safety, class, uniqueness) in New York City</h4>
+              <img src="https://38.media.tumblr.com/2cb9b156739949cf307b5642f2addb5c/tumblr_ng4hl0cl1Q1u4kmd4o2_1280.png" width="940px"/>
+              <h4>Points that rank in the top quartile for all categories (safety, class, uniqueness)in Boston</h4>
+              <img src="https://38.media.tumblr.com/992b54396f1213f0bfffe577bb565f44/tumblr_ng4hl0cl1Q1u4kmd4o1_1280.png" width="940px"/>
+
             </p>
           </div>
           <div role="tabpanel" class="tab-pane" id="settings">
             <h3><strong>Crime vs. Perceptions of Safety in New York City:</strong></h3>
             <p>
-              <iframe width="940" height="600" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://occidental.maps.arcgis.com/home/webmap/templates/OnePane/basicviewer/embed.html?webmap=af6409d05252448ca33c74b6499226c0&amp;gcsextent=-74.2379,40.5608,-73.6048,40.8461&amp;displayslider=true&amp;displaylegend=true&amp;displaysearch=true&amp;searchextent=true"></iframe>
-              <br><em>(If the above map does not render, you can find it <a href="http://bit.ly/1vtLseG" target="_blank"><u>here</u></a>)</em>
+             <img src="https://38.media.tumblr.com/179e45d18fca4afba314b1fc3cad9f3d/tumblr_ng4hq5gXVG1u4kmd4o1_1280.png" width="940px"/>
+             <br><em>(You can find the full interactive map <a href="http://bit.ly/1vtLseG" target="_blank"><u>here</u></a>)</em>
               <br>
               <img src="CrimeMapNYC.png" width="940px"/>
               <br><em>(You can find the full interactive map <a href="http://maps.nyc.gov/crime/" target="_blank"><u>here</u></a>)</em>
